Less with for sponsors section on small screens fixed

--- a/assets/stylesheets/config/_responsive-short.scss
+++ b/assets/stylesheets/config/_responsive-short.scss
@@ -1,9 +1,3 @@
 @media screen and (max-width: 767px) {
   @include grid_generator;
 }
-
-@media screen and (max-width: 400px) {
-  .sponsors {
-    width: 280px;
-  }
-}
